# valura-ai

./: .env.example  .gitignore  DEFENCE.md  README.md  pyproject.toml
fixtures/: README.md
fixtures/conversations/: conv_001_followup_entity_carryover.json  conv_002_topic_switch.json  conv_003_pronoun_and_implicit.json
fixtures/test_queries/: intent_classification.json  safety_pairs.json
fixtures/users/: user_001_aggressive_trader.json  user_002_concentrated_nvda.json  user_003_dividend_retiree.json  user_004_empty.json  user_005_global_multi_currency.json
scripts/: measure_latency.py
src/valura_ai/: __init__.py  config.py  main.py
src/valura_ai/agents/: base.py  portfolio_health.py  registry.py  schemas.py  stub.py
src/valura_ai/api/: pipeline.py  routes.py  sse.py  user_store.py
src/valura_ai/classifier/: classifier.py  heuristic.py  prompt.py  schema.py
src/valura_ai/llm/: client.py  fakes.py
src/valura_ai/portfolio/: market_data.py  metrics.py  models.py
src/valura_ai/safety/: guard.py  patterns.py
src/valura_ai/session/: store.py
tests/: conftest.py  matchers.py  test_api.py  test_classifier.py  test_fixtures.py  test_llm_client.py  test_llm_fake.py  test_portfolio.py  test_portfolio_health_agent.py  test_safety_guard.py  test_safety_robustness.py  test_smoke.py  test_stub_and_registry.py
