[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valura-ai"
version = "0.1.0"
description = "Valura AI microservice — safety + classifier + portfolio-health agent + SSE."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Valura AI candidate" }]
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "openai>=1.50",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning:yfinance.*",
    "ignore::DeprecationWarning:pandas.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
